// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly bind a project 1`] = `
<React.Fragment>
  <h2>
    SonarCloud Settings
  </h2>
  <div
    className="settings-content"
  >
    <div
      className="settings-logo"
    >
      <SonarCloudIcon
        size={128}
      />
    </div>
    <p
      className="settings-description"
    >
      To display the quality of your repository, you have to link it with a project analyzed on SonarCloud.
    </p>
    <React.Fragment>
      <form
        className="settings-form"
        onSubmit={[Function]}
      >
        <div
          className="settings-projects"
        >
          <label
            htmlFor="projects-select"
          >
            Project to link to
          </label>
          <AtlaskitSelect
            autoFocus={true}
            className="settings-projects-select"
            filterOption={[Function]}
            id="projects-select"
            isClearable={false}
            isSearchable={true}
            maxMenuHeight={300}
            onChange={[Function]}
            onClickPreventDefault={true}
            options={
              Array [
                Object {
                  "label": "Foo",
                  "value": "foo",
                },
                Object {
                  "label": "Bar",
                  "value": "bar",
                },
                Object {
                  "label": "FooBar",
                  "value": "baz",
                },
              ]
            }
            placeholder="Select a project"
            spacing="default"
            validationState="default"
          />
          <small>
            You see only the projects you administer.
          </small>
        </div>
        <div
          className="display-flex-justify-center"
        >
          <CheckboxStateless
            isChecked={true}
            label="Show repository overview widget"
            name="show-widget"
            onChange={[Function]}
            value="show-widget"
          />
        </div>
        <div
          className="ak-field-group"
        >
          <WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button)))
            analyticsContext={Object {}}
            appearance="primary"
            isDisabled={true}
            type="submit"
          >
            Save
          </WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button)))>
        </div>
      </form>
      <HelpLink />
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`should display correctly 1`] = `
<React.Fragment>
  <h2>
    SonarCloud Settings
  </h2>
  <div
    className="settings-content"
  >
    <div
      className="settings-logo"
    >
      <SonarCloudIcon
        size={128}
      />
    </div>
    <p
      className="settings-description"
    >
      To display the quality of your repository, you have to link it with a project analyzed on SonarCloud.
    </p>
    <div
      className="huge-spacer-top"
    >
      <Spinner
        delay={100}
        invertColor={false}
        isCompleting={false}
        onComplete={[Function]}
        size="large"
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`should display correctly 2`] = `
<React.Fragment>
  <h2>
    SonarCloud Settings
  </h2>
  <div
    className="settings-content"
  >
    <div
      className="settings-logo"
    >
      <SonarCloudIcon
        size={128}
      />
    </div>
    <p
      className="settings-description"
    >
      To display the quality of your repository, you have to link it with a project analyzed on SonarCloud.
    </p>
    <React.Fragment>
      <form
        className="settings-form"
        onSubmit={[Function]}
      >
        <div
          className="settings-projects"
        >
          <label
            htmlFor="projects-select"
          >
            Project to link to
          </label>
          <AtlaskitSelect
            autoFocus={true}
            className="settings-projects-select"
            filterOption={[Function]}
            id="projects-select"
            isClearable={false}
            isSearchable={true}
            maxMenuHeight={300}
            onChange={[Function]}
            onClickPreventDefault={true}
            options={
              Array [
                Object {
                  "label": "Foo",
                  "value": "foo",
                },
                Object {
                  "label": "Bar",
                  "value": "bar",
                },
                Object {
                  "label": "FooBar",
                  "value": "baz",
                },
              ]
            }
            placeholder="Select a project"
            spacing="default"
            validationState="default"
            value={
              Object {
                "label": "Foo",
                "value": "foo",
              }
            }
          />
          <small>
            You see only the projects you administer.
          </small>
        </div>
        <div
          className="display-flex-justify-center"
        >
          <CheckboxStateless
            isChecked={true}
            label="Show repository overview widget"
            name="show-widget"
            onChange={[Function]}
            value="show-widget"
          />
        </div>
        <div
          className="ak-field-group"
        >
          <WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button)))
            analyticsContext={Object {}}
            appearance="primary"
            isDisabled={true}
            type="submit"
          >
            Save
          </WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button)))>
        </div>
      </form>
      <HelpLink />
    </React.Fragment>
  </div>
</React.Fragment>
`;

exports[`should display the authentication component and the display checkbox 1`] = `
<form
  className="settings-form"
  onSubmit={[Function]}
>
  <div
    className="display-flex-justify-center"
  >
    <CheckboxStateless
      isChecked={true}
      label="Show repository overview widget"
      name="show-widget"
      onChange={[Function]}
      value="show-widget"
    />
  </div>
  <div
    className="ak-field-group"
  >
    <WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button)))
      analyticsContext={Object {}}
      appearance="primary"
      isDisabled={true}
      type="submit"
    >
      Save
    </WithAnalyticsContext(WithAnalyticsEvents(WithDeprecationWarnings(Button)))>
  </div>
</form>
`;
